PyMaker/datas/object2/RawHTML/i8901/Python_DOC_referPages.python-3-5-venv-invalid-syntax.txt
<div class="post-text" itemprop="text">
<p>I'm trying to run this specific line, but I am getting an error.
I am using the command prompt and I installed python to path when I check the install to path option on the windows python.exe</p>
<pre><code>&gt;&gt;&gt;python3 -m venv tutorial-env
   File "&lt;stdin&gt;", line 1
     python3 -m venv tutorial-env
                   ^
SyntaxError: invalid syntax
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>That command should be <a href="https://docs.python.org/3/using/cmdline.html" rel="nofollow noreferrer">run from your OS-level shell</a>, not from Python:</p>
<pre><code>$ python3 -m venv tutorial-env
</code></pre>
<p>or on Windows:</p>
<pre><code>C:\&gt; python3 -m venv tutorial-env
</code></pre>
<p>Depending on how Python was installed you might need to use <code>python</code> or even <code>python2</code> instead of <code>python3</code>.</p>
</div>
